# ggml

./: .gitignore
examples/mnist/: mnist-train.cpp
include/: ggml.h
src/: ggml-backend-reg.cpp  ggml-backend.cpp  ggml-opt.cpp  ggml.c  gguf.cpp
tests/: CMakeLists.txt  test-fuzz-mnist.cpp  test-fuzz.cpp
